Migrate from tinydb to mongodb

--- a/h42auth/templates/base-html.html.j2
+++ b/h42auth/templates/base-html.html.j2
@@ -4,12 +4,13 @@
       <title>{{ title }} | Auth </title>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+      <link href="{{ url_for('static', filename='img/favicon.png') }}" rel="icon" />
       <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
       <link href="{{ url_for('static', filename='css/fontawesome.min.css') }}" rel="stylesheet">
       <link href="{{ url_for('static', filename='css/h42auth.css') }}" rel="stylesheet">
   </head>
-  <body class="d-flex flex-column h-100">
-    {% block body %}
+  <body class="d-flex flex-column h-100 bg-main">
+    {% block html %}
     {% endblock %}
     <script src="{{ url_for('static', filename='js/jquery-3.4.1.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/bootstrap.bundle.min.js') }}"></script>
