--- a/h42auth/templates/error_404.html.j2
+++ b/h42auth/templates/error_404.html.j2
@@ -1,6 +1,6 @@
-{% extends "base.html.j2" %}
+{% extends "base-html.html.j2" %}
 
-{% block body %}
+{% block html %}
 
 <div class="container-fluid text-center">
   <h1 class="error-big">Oops !! 404</h1>
