--- a/h42auth/templates/home.html.j2
+++ b/h42auth/templates/home.html.j2
@@ -1,9 +1,40 @@
-{% extends "base.html.j2" %}
+{% extends "base-page.html.j2" %}
 
 {% block body %}
-
-<div class="container-fluid text-center">
-  <h1 class="error-big">Home</h1>
+<div class="row">
+  <div class="col-lg-6">
+    <div class="shadow p-3 mb-5 bg-white rounded">
+        <h4><i class="fas fa-user-shield"></i> Your user : {{user.username}}</h4>
+        <table class="table">
+          <tbody>
+            <tr>
+              <th scope="row">Uid</th>
+              <td> {{ user.uid }}</td>
+            </tr>
+            <tr>
+              <th scope="row">Domain</th>
+              <td> {{ user.domain }}</td>
+            </tr>
+          </tbody>
+        </table>
+    </div>
+  </div>
+  <div class="col-lg-6">
+    <div class="shadow p-3 mb-5 bg-white rounded">
+      <h4><i class="fas fa-share-square"></i> Forward Auth Active Session </h4>
+      {% if fasessions %}
+      {% for session in fasessions %}
+        <p>
+          Session: {{ session.token }} <a href="{{ url_for('forward_terminate',token=session.token) }}"  class="btn btn-danger"><i class="fas fa-unlink"></i> Terminate</a><br />
+          Server: {{ session.server }} <br />
+          Service : {{ session.host }} <br />
+          Expires : {{ session.expires | tdelta  }} <br />
+        </p>
+      {% endfor %}
+      {% else %}
+        <p> No active session <p>
+      {% endif %}
+    </div>
+  </div>
 </div>
-
 {% endblock %}
