--- a/h42auth/templates/login.html.j2
+++ b/h42auth/templates/login.html.j2
@@ -1,31 +1,67 @@
-{% extends "base.html.j2" %}
+{% extends "base-html.html.j2" %}
 
-{% block body %}
-<div class="container-fluid text-center">
-  <h1>Sign In</h1>
-  <form action="" method="post">
-    {{ form.hidden_tag() }}
-    <p>
-      {{ form.username.label }}<br>
-      {{ form.username(size=32) }}
-    </p>
-    <p>
-      {{ form.password.label }}<br>
-      {{ form.password(size=32) }}
-    </p>
-    <p>{{ form.submit() }}</p>
-  </form>
+{% block html %}
 
-  {% if forward  %}
-  <div>
-    <div>
-      <p>
-        <i class="fas fa-server"></i> Server Id : {{ forward.server }} <br />
-        <i class="fas fa-globe"></i> Url : {{ forward.url }}
-      </p>
+
+<main role="main" class="mt-5">
+
+  {% with messages = get_flashed_messages(with_categories=true) %}
+    {% if messages %}
+    <div class="container">
+      {% for category, message in messages %}
+        {% if category == 'error' %}
+        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+          <i class="fas fa-exclamation-triangle"></i> {{ message }}
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        {% else %}
+        <div class="alert alert-primary alert-dismissible fade show" role="alert">
+          <div class="alert alert-danger alert-dismissible fade show" role="alert">
+            {{ message }}
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+        {% endif %}
+      {% endfor %}
+    </div>
+    {% endif %}
+  {% endwith %}
+
+  <div class="jumbotron shadow p-3 mb-5 rounded container">
+    <div class="row">
+      <div class="col">
+        <img class="w-100 m-auto" src="{{ url_for('static', filename='img/logo.png')}}" alt="H42 Auth" />
+      </div>
+      <div class="col-lg-8">
+        <h1>Sign In</h1>
+        <h6> Mandatory domain <i class="fas fa-at"></i> {{ domain }} </h6>
+        <form action="" method="post" autocomplete="off">
+          {{ form.hidden_tag() }}
+          <div class="form-group">
+            {{ form.username.label }}<br>
+            {{ form.username(size=32, class_="form-control", placeholder="Enter username") }}
+          </div>
+          <div class="form-group">
+            {{ form.password.label }}<br>
+            {{ form.password(size=32, class_="form-control", placeholder="Enter password") }}
+          </div>
+          <button type="submit" class="btn btn-primary"><i class="fas fa-sign-in-alt"></i> Sign In</button>
+        </form>
+        {% if forward  %}
+        <div class="shadow p-3 mt-4 ml-3 mb-3 mr-3 bg-white rounded">
+          <h4><i class="fas fa-share-square"></i> Forward Auth</h4>
+          <p>
+            <i class="fas fa-server"></i> Server Id : {{ forward.server }} <br />
+            <i class="fas fa-globe"></i> Url : {{ forward.url }}
+          </p>
+        </div>
+        {% endif %}
+      </div>
     </div>
   </div>
-  {% endif %}
+</main>
 
-</div>
 {% endblock %}
