--- a/h42auth/templates/base-page.html.j2
+++ b/h42auth/templates/base-page.html.j2
@@ -18,7 +18,7 @@
         </a>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown01">
           <a class="dropdown-item" href="#"><i class="fas fa-cogs"></i> Settings</a>
-          <a class="dropdown-item" href="#"><i class="fas fa-key"></i> Change Password</a>
+          <a class="dropdown-item" href="{{ url_for('user_password') }}"><i class="fas fa-key"></i> Change Password</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="{{ url_for('auth_logout') }}"><i class="fas fa-sign-out-alt"></i> Sign Out</a>
         </div>
@@ -53,16 +53,17 @@
   <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
     {% with messages = get_flashed_messages(with_categories=true) %}
       {% if messages %}
+      <div class="row mt-2">
         {% for category, message in messages %}
           {% if category == 'error' %}
-          <div class="alert alert-danger alert-dismissible fade show" role="alert">
+          <div class="alert alert-danger alert-dismissible fade show w-100" role="alert">
             <i class="fas fa-exclamation-triangle"></i> {{ message }}
             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
           {% else %}
-            <div class="alert alert-primary alert-dismissible fade show" role="alert">
+            <div class="alert alert-primary alert-dismissible fade show w-100" role="alert">
               {{ message }}
               <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
@@ -70,6 +71,7 @@
             </div>
           {% endif %}
         {% endfor %}
+        </div>
       {% endif %}
     {% endwith %}
 
@@ -84,6 +86,35 @@
 
 {% else %}
 <main role="main" class="mt-5">
+
+  {% with messages = get_flashed_messages(with_categories=true) %}
+    {% if messages %}
+    <div class="container">
+    <div class="row mt-2">
+      <div class="col">
+      {% for category, message in messages %}
+        {% if category == 'error' %}
+        <div class="alert alert-danger alert-dismissible fade show w-100" role="alert">
+          <i class="fas fa-exclamation-triangle"></i> {{ message }}
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        {% else %}
+          <div class="alert alert-primary alert-dismissible fade show w-100" role="alert">
+            {{ message }}
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+        {% endif %}
+      {% endfor %}
+      </div>
+    </div>
+    </div>
+    {% endif %}
+  {% endwith %}
+
   <div class="jumbotron shadow p-3 mb-5 rounded container">
     <div class="row">
       <div class="col">
@@ -91,7 +122,7 @@
       </div>
       <div class="col-lg-9">
         <h1>Welcome to H42 Auth Service</h1>
-        <p class="lead">  .</p>
+        <p class="lead">The H42 Auth Server provide very simple identities management, session traking, microservice authentication and possibility to create federated authentication service master less.</p>
         <a class="btn btn-lg btn-primary" href="{{ url_for('auth_login') }}" role="button"><i class="fas fa-sign-in-alt"></i> Sign In</a>
       </div>
     </div>
