--- a/h42auth/templates/login.html.j2
+++ b/h42auth/templates/login.html.j2
@@ -18,13 +18,12 @@
         </div>
         {% else %}
         <div class="alert alert-primary alert-dismissible fade show" role="alert">
-          <div class="alert alert-danger alert-dismissible fade show" role="alert">
-            {{ message }}
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-        {% endif %}
+          {{ message }}
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+      {% endif %}
       {% endfor %}
     </div>
     {% endif %}
@@ -42,7 +41,7 @@
           {{ form.hidden_tag() }}
           <div class="form-group">
             {{ form.username.label }}<br>
-            {{ form.username(size=32, class_="form-control", placeholder="Enter username") }}
+            {{ form.username(size=32, class_="form-control", placeholder="Enter username", autofocus="autofocus") }}
           </div>
           <div class="form-group">
             {{ form.password.label }}<br>
