--- a/h42auth/templates/base-page.html.j2
+++ b/h42auth/templates/base-page.html.j2
@@ -32,11 +32,11 @@
   </div>
 </nav>
 
-<div class="container-fluid">
+<div class="container-fluid min-h-100">
 
 {% if user.is_authenticated %}
 
-<div class="row min-vh-100">
+<div class="row">
   <nav class="col-md-2 d-none d-md-block bg-light sidebar">
     <div class="sidebar-sticky">
       <ul class="nav flex-column">
